--- a/IG-Publisher/ig.ini
+++ b/IG-Publisher/ig.ini
@@ -2,4 +2,4 @@
 ig = input/ig.json
 template = hcx-ig-template-local
 usage-stats-opt-out = false
-#template = fhir.base.template
+#template = hl7.base.template
